# System-Integrations-Engineer-Technical-Test

./: README.md  pyproject.toml
src/: CONSTS.py  main.py
src/payload_translator/: payload_translator.py
src/routes/: costumer_routes.py
src/schemas/: customer_schema.py  tracos_schema.py
src/services/: tracos_service.py
tests/: test_costumer.py  test_payload_translation.py  test_tracos_service.py
