[tool.poetry]
name = "integrations-engineering-code-assesment"
version = "0.1.0"
description = "Async Python project for bidirectional workorder integration between systems"
authors = ["Your Name <you@example.com>"]
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
python-decouple = "3.8"
loguru = "^0.7.2"
motor = "^3.1.1"            # Async MongoDB driver
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"  # Async support for pytest
pydantic = "^2.11.7"
pymongo = "^4.13.2"
sentry-sdk = "^2.34.1"

[tool.poetry.group.formatting.dependencies]
black = "^23.3.0"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.1"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | _build
)/
'''

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]